Add manifest and icons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<!doctype html5>
+<!doctype html>
 <html>
   <head>
     <title>Color</title>
@@ -9,11 +8,24 @@
 
   <body>
 
+    <!-- Menu -->
+    <section id="menu">
+      <h1>Color</h1>
+      <ul>
+        <li><a href="#">Pick Color</a></li>
+        <li><a href="#">Palette Gallery</a></li>
+      </ul>
+    </section>
+
+    <!-- Picker -->
     <section id="color">
       <h1 id="hex">#333</h1>
       <p>Move phone to change color. Tap to choose.</p>
     </section>
+    <!-- Picker -->
 
+
+    <!-- Palette -->
     <section id="combo">
       <div><p></p></div>
       <div><p></p></div>
@@ -25,6 +37,8 @@
 	Tap to pick another color.
       </p>
     </section>
+    <!-- Palette -->
+
 
     <script src="lib/jquery.min.js"></script>
     <script src="lib/gyro.min.js"></script>
