--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Color</title>
 
     <link rel="stylesheet" type="text/css" href="src/css/master.css">
+    <link rel="stylesheet" type="text/css" href="font/stylesheet.css">
   </head>
 
   <body>
@@ -12,8 +13,8 @@
     <section id="menu">
       <h1>Color</h1>
       <ul>
-        <li><a href="#">Pick Color</a></li>
-        <li><a href="#">Palette Gallery</a></li>
+        <li><a id="menu_picker" href="#">Pick Color</a></li>
+        <li><a id="menu_gallery" href="#">Gallery</a></li>
       </ul>
     </section>
 
@@ -33,9 +34,10 @@
       <div><p></p></div>
       <div><p></p></div>
 
-      <p>
-	Tap to pick another color.
-      </p>
+      <section id="combo_toolbar">
+        <a href="#">Menu</a>
+        <a href="#">Gallery</a>
+      </section>
     </section>
     <!-- Palette -->
 
