--- a/index.html
+++ b/index.html
@@ -4,24 +4,16 @@
     <title>Color</title>
 
     <link rel="stylesheet" type="text/css" href="src/css/master.css">
-    <link rel="stylesheet" type="text/css" href="font/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="font/robotolightcondensed.css">
+    <link rel="stylesheet" type="text/css" href="font/robotoregular.css">
   </head>
 
   <body>
 
-    <!-- Menu -->
-    <section id="menu">
-      <h1>Color</h1>
-      <ul>
-        <li><a id="menu_picker" href="#">Pick Color</a></li>
-        <li><a id="menu_gallery" href="#">Gallery</a></li>
-      </ul>
-    </section>
-
     <!-- Picker -->
     <section id="color">
       <h1 id="hex">#333</h1>
-      <p>Move phone to change color. Tap to choose.</p>
+      <p>Tilt phone to change color. Tap to choose.</p>
     </section>
     <!-- Picker -->
 
@@ -34,10 +26,9 @@
       <div><p></p></div>
       <div><p></p></div>
 
-      <section id="combo_toolbar">
-        <a href="#">Menu</a>
-        <a href="#">Gallery</a>
-      </section>
+      <p>
+        Tap to pick another color.
+      </p>
     </section>
     <!-- Palette -->
 
